fix: Aligning navbar with new raidprotect.bot

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -40,7 +40,7 @@ html[data-theme='dark'] {
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
   --ifm-footer-title-color: white;
   --ifm-menu-color: var(--ifm-color-content);
-  --ifm-navbar-height: 51px;
+  --ifm-navbar-height: 53px;
   --ifm-font-family-base: 'Objectivity', 'Arial', sans-serif;
   --ifm-heading-font-family: 'Nohemi VF', 'Arial', sans-serif;
 }
